Added route to set jobs applied column to true Added filtering by applied attributes
